# JohnsGamePrice

./: .deploy.local.sh  .deploy.sh  .deploy.test.sh  .gitignore  .release-please-manifest.json  .teardown.local.sh  LICENSE  README.md  deploy.local.sh  deploy.sh  docker-compose.test.yml  docker-compose.yml  integration-test.sh  integration_test.sh  promtail-config.yml  release-please-config.json  teardown.sh
.github/workflows/: ci-cd.yml  codeql.yml  deploy.yml  integration-tests.yml  integration.yml  k8s-integration-test.yaml  release-please.yml  test.yaml  test.yml  unit-tests.yml
Design/: .$Architecture Diagram.drawio.bkp  Architecture Interfaces.odt  John's Game Price.vpp  John's Game Price.vpp.bak_000f  John's Game Price.vpp.bak_002d  John's Game Price.vpp.bak_007d  John's Game Price.vpp.bak_009d  Tech Stack.odt
api-gateway/: Dockerfile  README.md  bun.lockb  eslint.config.js  package.json  tsconfig.json
api-gateway/src/: app.ts  index.ts
api-gateway/tests/: app.test.ts  games.test.ts  setups.ts
backend/: CHANGELOG.md  Dockerfile  README.md  dev.sh  pyproject.toml  requirements.txt
backend/db/: connection.py
backend/db/crud/: user.py
backend/db/schemas/: __init__.py  meta.py  user.py
backend/src/: __init__.py  itad_client.py  logger.py  main.py
backend/src/jpg_backend/: itad_client.py  main.py  models.py  utils.py
backend/tests/: conftest.py
backend/tests/integration/: test_get_price_history.py  test_get_prices.py  test_root.py  test_search_game.py
backend/tests/unit/: test_user_crud.py  test_verify_country_code.py  test_verify_date_format.py
frontend/: .prettierignore  CHANGELOG.md  Dockerfile  README.md  index.html  package.json
frontend/src/: App.css  (+3 more)
game-id-fetcher/: .env  Dockerfile  README.md
game-price-fetcher/: .gitignore  Dockerfile  README.md
johnsgameprice-stack/: Chart.yaml  grafana-values.yaml  loki-values.yaml  promtail-values.yaml
k8s/: api-gateway-deployment.yaml  price-fetcher-deployment.yaml  price-fetcher-service.yaml  tester-deployment.yaml  tester-service.yaml  web-deployment.yaml  web-service.yaml
price-fetcher/: Dockerfile  README.md
scripts/: deploy.sh  integration_test.sh  port-forward.sh  teardown.sh
web/: Dockerfile  README.md  bun.lockb  package.json  vite.config.ts
(+134 files in other folders)
